--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,8 @@ github_username:  mhuerster
 markdown: kramdown
 permalink: pretty
 paginate: 10
+comments: true
+analytics :
+  provider : google
+  google : 
+      tracking_id : 'UA-52147811-1'
