--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Molly Huerster
 email: mary.huerster@gmail.com
 description: "I'm a recent graduate of Washington & Lee and more recent gradaute of Dev Bootcamp. Life is good."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http:mhuerster.github.io"
 twitter_username: mhuerster
 github_username:  mhuerster
 
