--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Molly Huerster
 email: mary.huerster@gmail.com
-description: "I'm a recent graduate of Washington & Lee and more recent gradaute of Dev Bootcamp. Life is good."
+description: "I'm a full stack developer and recent transplant to San Francisco. Life is good."
 baseurl: ""
 url: "http:mhuerster.github.io"
 twitter_username: mhuerster
