create page and start adding content/styling prefix all classes with resume

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Molly Huerster
 email: mary.huerster@gmail.com
 description: "I'm a full stack developer and recent transplant to San Francisco. Life is good."
 baseurl: ""
-url: "http:mhuerster.github.io"
+url: "http:www.mhuerster.com"
 twitter_username: mhuerster
 github_username:  mhuerster
 
